--- a/src/styles/components/TenantDetails.scss
+++ b/src/styles/components/TenantDetails.scss
@@ -73,7 +73,18 @@
               color: #c82333;
             }
           }
-          
+.tenant-eye-button{
+          background: none;
+          border: none;
+          cursor: pointer;
+          font-size: 1.2rem;
+          color: #555;
+          transition: color 0.3s ease;
+
+          &:hover {
+            color: #000;
+          }
+        }
          
         }
       }
@@ -333,9 +344,7 @@
       border: none;
     font-size: 18px;
     background: none;
-
-
-
+    cursor: pointer;
       &:hover {
         color: #0056b3;
       }
@@ -346,6 +355,8 @@
       border: none;
       font-size: 18px;
       background: none;
+      cursor: pointer;
+
 
 
 
@@ -353,7 +364,55 @@
         color: #c82333;
       }
     }
+
+    .tenant-eye-button{
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 1.2rem;
+      color: #555;
+      transition: color 0.3s ease;
+
+      &:hover {
+        color: #000;
+      }
+    }
     
+}
+
+.tenants-count {
+  margin-left: 1300px;
+  margin-right: 0px;
+  margin-top: 15px;
+}
+
+.tenant-form-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  .tenant-form-modal-container {
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    width: 300px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  }
+
+  
+.tenant-view-close-button {
+  background: #6c757d;
+  color: #fff;
+  border-radius: 5px;
+  padding: 7px 13px;
+  border: 1px solid #ccc;
+}
 }
 
 
@@ -409,7 +468,7 @@
 
         
 .TenantDetails-table {
-  width: 145%;
+  width: 149%;
   border-collapse: collapse;
   // margin: 0 auto;
   font-size: 16px;
@@ -547,10 +606,14 @@
       margin-left: 10px;
         margin-right: 10px;
 }
+.tenants-count{
+margin-left: 570px;
+        margin-right: 0px;
+        margin-top: 15px;
+}
 
 
-
-      }
+}
 
 
 
@@ -567,7 +630,7 @@
 
   
 .TenantDetails-table {
-  width: 291%;
+  width: 300%;
   border-collapse: collapse;
   margin: 0 auto;
   font-size: 16px;
@@ -695,6 +758,10 @@
   padding: 6px;
   border-radius: 7px;
   border: 1px solid #ccc;
+}
+
+.tenants-count{
+margin-left: 145px;
 }
 
  }
