--- a/src/styles/components/ExpenditureDetails.scss
+++ b/src/styles/components/ExpenditureDetails.scss
@@ -340,7 +340,7 @@
     cursor: pointer;
     font-size: 17px;
     border-radius: 5px;
-    margin-left: 1039px;
+    margin-left: 1054px;
   }
 
   .expenditure-search-input{
@@ -351,7 +351,7 @@
   margin-bottom: 26px;
   margin-top: 10px;
   min-width: 15%;
-  margin-left: 1201px;
+  margin-left: 1214px;
   height: 26px;
   padding: 6px;
   border-radius: 7px;
@@ -402,3 +402,216 @@
       font-size: 12px;
     }
   }
+
+
+  @media (min-width: 1025px) and (max-width: 1399px) {
+
+  .expenditure-card {
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 16px;
+    width: 21%;
+    max-width: 265px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.expenditure-add-button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 8px 32px;
+  margin-right: 14px;
+  cursor: pointer;
+  font-size: 17px;
+  border-radius: 5px;
+  margin-left: 915px;
+}
+.expenditure-exportall-button {
+  background-color: #007bff;
+  color: rgb(248, 240, 240);
+  border: none;
+  margin-left: 65px;
+  padding: 11px 20px;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 5px;
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.expenditure-search-input {
+  display: flex;
+  justify-content: center;
+  padding: 0 10px;
+  padding: 0 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  min-width: 15%;
+  margin-left: 1086px;
+  height: 26px;
+  padding: 6px;
+  border-radius: 7px;
+  border: 1px solid #ccc;
+}
+.expenditure-table-list .expenditure-table {
+  width: 91%;
+  border-collapse: collapse;
+  font-size: 15px;
+  margin: 0 auto;
+  text-align: left;
+}
+.expenditure-count {
+  margin-left: 1140px;
+}
+  }
+
+  @media (min-width: 768px) and (max-width: 1023px){
+
+    .expenditure-exportall-button {
+      background-color: #007bff;
+      color: rgb(248, 240, 240);
+      border: none;
+      margin-left: 44px;
+      padding: 9px 20px;
+      cursor: pointer;
+      font-size: 17px;
+      border-radius: 5px;
+      position: relative;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+  }
+  .expenditure-switch-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 7px 11px;
+    cursor: pointer;
+    font-size: 17px;
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+    margin-left: 17px;
+    width: 57px;
+    height: 39px;
+}
+  .expenditure-add-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 8px 32px;
+    margin-right: 14px;
+    cursor: pointer;
+    font-size: 17px;
+    border-radius: 5px;
+    margin-left: 359px;
+}
+.expenditure-search-input {
+  display: flex;
+  justify-content: center;
+  padding: 0 10px;
+  padding: 0 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  min-width: 30%;
+  margin-left: 482px;
+  height: 26px;
+  padding: 6px;
+  border-radius: 7px;
+  border: 1px solid #ccc;
+}
+.expenditure-table-list .expenditure-table {
+  width: 89%;
+  border-collapse: collapse;
+  font-size: 15px;
+  margin: 0 auto;
+  text-align: left;
+}
+.expenditure-table-list .expenditure-table tbody tr td.expenditure-actions {
+  justify-content: center;
+  gap: 10px;
+  width: 75px;
+}
+.expenditure-count {
+  margin-left: 530px;
+}
+  }
+
+  @media (max-width: 767px) {
+
+    .expenditure-exportall-button {
+      background-color: #007bff;
+      color: rgb(248, 240, 240);
+      border: none;
+      margin-left: 32px;
+      padding: 6px 17px;
+      cursor: pointer;
+      font-size: 15px;
+      border-radius: 5px;
+      position: relative;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+  }
+  .expenditure-switch-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 7px 11px;
+    cursor: pointer;
+    font-size: 15px;
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
+    width: 53px;
+    height: 36px;
+}
+
+  .expenditure-add-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 3px 18px;
+    margin-right: 14px;
+    cursor: pointer;
+    width: 40%;
+    font-size: 15px;
+    border-radius: 5px;
+    margin-left: 58px;
+}
+.expenditure-search-input {
+  display: flex;
+  justify-content: center;
+  padding: 0 10px;
+  padding: 0 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  min-width: 15%;
+  margin-left: 185px;
+  height: 20px;
+  padding: 6px;
+  border-radius: 7px;
+  border: 1px solid #ccc;
+}
+.expenditure-table-list {
+  margin: 20px 0;
+  overflow-x: scroll;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.expenditure-table-list .expenditure-table {
+  width: 120%;
+  border-collapse: collapse;
+  font-size: 15px;
+  margin: 0 auto;
+  text-align: left;
+}
+.expenditure-count {
+  margin-left: 125px;
+}
+  }
+
+
