--- a/src/styles/components/IncomeDetails.scss
+++ b/src/styles/components/IncomeDetails.scss
@@ -360,7 +360,7 @@
     cursor: pointer;
     font-size: 17px;
     border-radius: 5px;
-    margin-left: 1073px;
+    margin-left: 1090px;
   }
 
   .income-search-input{
@@ -371,7 +371,7 @@
   margin-bottom: 26px;
   margin-top: 10px;
   min-width: 15%;
-  margin-left: 1201px;
+  margin-left: 1214px;
   height: 26px;
   padding: 6px;
   border-radius: 7px;
@@ -422,3 +422,196 @@
       font-size: 12px;
     }
   }
+
+  @media (min-width: 1025px) and (max-width: 1399px) {
+    .income-table-list .income-table {
+      width: 91%;
+      border-collapse: collapse;
+      font-size: 15px;
+      margin: 0 auto;
+      text-align: left;
+  }
+    .income-card {
+      background: #fff;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 16px;
+      width: 21%;
+      max-width: 265px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  .income-add-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 8px 32px;
+    margin-right: 14px;
+    cursor: pointer;
+    font-size: 17px;
+    border-radius: 5px;
+    margin-left: 952px;
+}
+.income-search-input {
+  display: flex;
+  justify-content: center;
+  padding: 0 10px;
+  padding: 0 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  min-width: 15%;
+  margin-left: 1086px;
+  height: 26px;
+  padding: 6px;
+  border-radius: 7px;
+  border: 1px solid #ccc;
+}
+
+.income-exportall-button {
+  background-color: #007bff;
+  color: rgb(248, 240, 240);
+  border: none;
+  margin-left: 63px;
+  padding: 11px 20px;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 5px;
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+.income-count {
+  margin-left: 1108px;
+}
+  }
+
+  @media (min-width: 768px) and (max-width: 1023px){
+    .income-table-list .income-table {
+      width: 89%;
+      border-collapse: collapse;
+      font-size: 15px;
+      margin: 0 auto;
+      text-align: left;
+  }
+    .income-add-button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 8px 32px;
+      margin-right: 14px;
+      cursor: pointer;
+      font-size: 17px;
+      width: 24%;
+      border-radius: 5px;
+      margin-left: 361px;
+  }
+  .income-search-input {
+    display: flex;
+    justify-content: center;
+    padding: 0 10px;
+    padding: 0 10px;
+    margin-bottom: 26px;
+    margin-top: 10px;
+    min-width: 30%;
+    margin-left: 482px;
+    height: 26px;
+    padding: 6px;
+    border-radius: 7px;
+    border: 1px solid #ccc;
+}
+.income-exportall-button {
+  background-color: #007bff;
+  color: rgb(248, 240, 240);
+  border: none;
+  margin-left: 45px;
+  padding: 11px 20px;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 5px;
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+.income-table-list .income-table tbody tr td.income-actions {
+  justify-content: center;
+  gap: 10px;
+  width: 72px;
+}
+
+    .income-count {
+      margin-left: 530px;
+  }  
+  }
+@media (max-width: 767px) {
+  .income-exportall-button {
+    background-color: #007bff;
+    color: rgb(248, 240, 240);
+    border: none;
+    margin-left: 30px;
+    padding: 7px 18px;
+    cursor: pointer;
+    font-size: 15px;
+    border-radius: 5px;
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+.income-switch-button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 7px 11px;
+  cursor: pointer;
+  font-size: 15px;
+  border-radius: 5px;
+  align-items: center;
+  justify-content: center;
+  margin-left: 15px;
+  width: 53px;
+  height: 36px;
+}
+.income-add-button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 8px 26px;
+  margin-right: 14px;
+  cursor: pointer;
+  font-size: 15px;
+  border-radius: 5px;
+  margin-left: 79px;
+}
+.income-search-input {
+  display: flex;
+  justify-content: center;
+  padding: 0 10px;
+  padding: 0 10px;
+  margin-bottom: 10px;
+        margin-top: 10px;
+        min-width: 15%;
+        margin-left: 186px;
+        height: 20px;
+  padding: 6px;
+  border-radius: 7px;
+  border: 1px solid #ccc;
+}
+.income-table-list {
+  margin: 20px 0;
+  overflow-x: scroll;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.income-table-list .income-table {
+  width: 110%;
+  border-collapse: collapse;
+  font-size: 15px;
+  margin: 0 auto;
+  text-align: left;
+}
+
+  .income-count {
+    margin-left: 130px;
+}
+}
