--- a/src/styles/components/TenantDetails.scss
+++ b/src/styles/components/TenantDetails.scss
@@ -106,6 +106,7 @@
     margin-left: 19px;
     width: 57px;
     height: 40px;
+    outline: none;
   }
   .Tenant-add-button{
   
@@ -119,6 +120,7 @@
       border-radius: 5px;
       margin-left: 1089px;
       margin-bottom: 21px;
+      outline: none;
   
   }
 
@@ -139,6 +141,7 @@
     display: inline-flex; /* Flex for alignment */
     align-items: center; /* Center alignment */
     justify-content: center; /* Center alignment */
+    outline: none;
   }
 
   .tenants_export_switch_add_button{
@@ -157,6 +160,7 @@
     padding: 6px;
     border-radius: 7px;
     border: 1px solid #ccc;
+    outline: none;
   }
 
 //edit and registraion-form styles...........
