--- a/src/styles/components/Navbar.scss
+++ b/src/styles/components/Navbar.scss
@@ -191,3 +191,31 @@
     }
   }
 }
+
+.nav-link {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown {
+  display: none;
+  position: absolute;
+  background-color: white;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.nav-link:hover .dropdown {
+  display: block;
+}
+
+.dropdown a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {
+  background-color: #ddd;
+}
