--- a/src/styles/components/ReportDetails.scss
+++ b/src/styles/components/ReportDetails.scss
@@ -44,3 +44,28 @@
 
 
     }
+
+    @media (min-width: 768px) and (max-width: 1023px){
+
+      .report_heading_1 {
+        text-align: center;
+        margin-bottom: 50px;
+    }
+    .report-card {
+      background-color: #f4f4f4;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 20px;
+      height: 90px;
+      text-align: center;
+      width: 350px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+  }
+  .report-cards {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 50px;
+}
+}
