--- a/src/styles/components/TenantDetails.scss
+++ b/src/styles/components/TenantDetails.scss
@@ -118,7 +118,7 @@
       cursor: pointer;
       font-size: 17px;
       border-radius: 5px;
-      margin-left: 1089px;
+      margin-left: 1100px;
       margin-bottom: 21px;
       outline: none;
   
@@ -463,8 +463,74 @@
         }
       }
 
-
-
+      @media (min-width: 1025px) and (max-width: 1399px){
+      .tenant-card {
+        background: #fff;
+        border: 1px solid #ddd;
+        border-radius: 8px;
+        padding: 16px;
+        width: 21%;
+        max-width: 265px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+    .Tenant-add-button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 8px 32px;
+      margin-right: 14px;
+      cursor: pointer;
+      font-size: 17px;
+      border-radius: 5px;
+      margin-left: 960px;
+      margin-bottom: 21px;
+      outline: none;
+  }
+  .tenant_search_bar {
+    display: flex;
+    justify-content: center;
+    padding: 0 10px;
+    padding: 0 10px;
+    margin-bottom: 26px;
+    margin-top: -1px;
+    min-width: 15%;
+    margin-left: 1086px;
+    height: 26px;
+    padding: 6px;
+    border-radius: 7px;
+    border: 1px solid #ccc;
+    outline: none;
+}
+.tenants_export_switch_add_button .tenant-export-button {
+  background-color: #007bff;
+  color: rgb(248, 240, 240);
+  border: none;
+  margin-left: 62px;
+  padding: 11px 20px;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 5px;
+  width: 57px;
+  height: 40px;
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  outline: none;
+}
+.tenants-count {
+  margin-left: 1150px;
+  margin-right: 0px;
+  margin-top: 15px;
+}
+.TenantDetails-table {
+  width: 91%;
+  border-collapse: collapse;
+  margin: 0 auto;
+  font-size: 16px;
+  text-align: left;
+}
+  }
 
 
       @media (min-width: 768px) and (max-width: 1024px){
