--- a/src/styles/components/EditNewsModal.scss
+++ b/src/styles/components/EditNewsModal.scss
@@ -57,6 +57,7 @@
     font-size: 14px;
     background: #007bff;
     color: #fff;
+    cursor: pointer;
 }
 
 .cancel {
@@ -66,6 +67,7 @@
     font-size: 14px;
     background: #6c757d;
     color: #fff;
+    cursor: pointer;
 }
 
 .add {
@@ -75,6 +77,7 @@
     font-size: 14px;
     background: #007bff;
     color: #fff;
+    cursor: pointer;
 }
 
 .cls {
@@ -84,4 +87,5 @@
     font-size: 14px;
     background: #6c757d;
     color: #fff;
+    cursor: pointer;
 }
