--- a/src/styles/components/EnquiryDetails.css
+++ b/src/styles/components/EnquiryDetails.css
@@ -1,48 +1,621 @@
-.tenant-table {
-  width: 80%;
+@charset "UTF-8";
+.enquiry-card-body .read-more-link {
+  cursor: pointer;
+  color: #007bff;
+}
+
+.Enquiry-table-1 .read-more-link {
+  cursor: pointer;
+  color: #007bff;
+}
+
+.enquiry-count {
+  margin-left: 1300px;
+  margin-right: 0px;
+  margin-top: 15px;
+}
+
+.Enquiry-table-1 {
+  width: 90%;
+  border-collapse: collapse;
   margin: 0 auto;
   font-size: 16px;
   text-align: left;
 }
-.tenant-table th, .tenant-table td {
+.Enquiry-table-1 th, .Enquiry-table-1 td {
   padding: 12px 15px;
+  border: 1px solid #ddd;
 }
-.tenant-table thead {
+.Enquiry-table-1 thead {
   background-color: #f4f4f4;
 }
-.tenant-table thead th {
+.Enquiry-table-1 thead th {
   font-weight: bold;
   text-transform: capitalize;
 }
-.tenant-table tbody tr:nth-child(even) {
+.Enquiry-table-1 tbody tr:nth-child(even) {
   background-color: #f9f9f9;
 }
-.tenant-table tbody tr:hover {
+.Enquiry-table-1 tbody tr:hover {
   background-color: #f1f1f1;
 }
-.tenant-table tbody tr td.actions {
+.Enquiry-table-1 tbody tr td.actions {
   gap: 10px;
-  width: 150px;
+  width: 100px;
 }
-.tenant-table tbody tr td.actions .edit-btn, .tenant-table tbody tr td.actions .delete-btn {
+.Enquiry-table-1 tbody tr td.actions .export-btn, .Enquiry-table-1 tbody tr td.actions .edit-btn, .Enquiry-table-1 tbody tr td.actions .delete-btn {
   background: none;
   border: none;
   cursor: pointer;
   font-size: 18px;
   color: #555;
 }
-.tenant-table tbody tr td.actions .edit-btn:hover, .tenant-table tbody tr td.actions .delete-btn:hover {
+.Enquiry-table-1 tbody tr td.actions .export-btn:hover, .Enquiry-table-1 tbody tr td.actions .edit-btn:hover, .Enquiry-table-1 tbody tr td.actions .delete-btn:hover {
   color: #000;
 }
-.tenant-table tbody tr td.actions .edit-btn {
+.Enquiry-table-1 tbody tr td.actions .edit-btn {
   color: #007bff;
 }
-.tenant-table tbody tr td.actions .edit-btn:hover {
+.Enquiry-table-1 tbody tr td.actions .edit-btn:hover {
   color: #0056b3;
 }
-.tenant-table tbody tr td.actions .delete-btn {
+.Enquiry-table-1 tbody tr td.actions .delete-btn {
   color: #dc3545;
 }
-.tenant-table tbody tr td.actions .delete-btn:hover {
+.Enquiry-table-1 tbody tr td.actions .delete-btn:hover {
   color: #c82333;
+}
+.Enquiry-table-1 tbody tr td.actions .export-btn {
+  color: #007bff;
+}
+.Enquiry-table-1 tbody tr td.actions .export-btn:hover {
+  color: #0056b3;
+}
+
+.enquiry_main_heading {
+  text-align: center;
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
+
+.export_switch_add_enquiry_buttons {
+  display: flex;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.enquiry_export_button {
+  background-color: #007bff;
+  color: rgb(248, 240, 240);
+  border: none;
+  margin-left: 76px;
+  padding: 11px 20px;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 5px;
+  position: relative; /* Added for positioning the hover text */
+  display: inline-flex; /* Flex for alignment */
+  align-items: center; /* Center alignment */
+  justify-content: center; /* Center alignment */
+  outline: none;
+}
+
+.enquiry_export_button:hover {
+  background-color: #0056b3; /* Replace with the actual $secondary-color value */
+}
+
+.enquiry_switch_button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 7px 11px;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 5px;
+  align-items: center;
+  justify-content: center;
+  margin-left: 19px;
+  width: 57px;
+  height: 40px;
+  outline: none;
+}
+
+.enquiry_switch_button:hover {
+  background-color: #0056b3; /* Replace with the actual $secondary-color value */
+}
+
+.enquiry_add_button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 8px 32px;
+  margin-right: 14px;
+  cursor: pointer;
+  font-size: 17px;
+  border-radius: 5px;
+  margin-left: 1089px;
+  outline: none;
+}
+
+.enquiry_search_bar {
+  display: flex;
+  justify-content: center;
+  padding: 0 10px;
+  padding: 0 10px;
+  margin-bottom: 26px;
+  margin-top: -1px;
+  min-width: 15%;
+  margin-left: 1215px;
+  height: 26px;
+  padding: 6px;
+  border-radius: 7px;
+  border: 1px solid #ccc;
+  outline: none;
+}
+
+.enquiry_export_button {
+  position: relative;
+}
+.enquiry_export_button:hover::after {
+  content: attr(data-tooltip);
+  position: absolute;
+  top: -1.5em;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #333;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  white-space: nowrap;
+  z-index: 1000;
+  pointer-events: none;
+  opacity: 0.8;
+  font-size: 12px;
+}
+
+.enquiry_switch_button {
+  position: relative;
+}
+.enquiry_switch_button:hover::after {
+  content: attr(data-tooltip);
+  position: absolute;
+  top: -1.5em;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #333;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  white-space: nowrap;
+  z-index: 1000;
+  pointer-events: none;
+  opacity: 0.8;
+  font-size: 12px;
+}
+
+nav {
+  margin-bottom: 30px;
+}
+
+.enquiry_pagination {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.enquiry_pagination .page-link {
+  display: block;
+  padding: 10px 15px;
+  color: #007bff;
+  text-decoration: none;
+  background-color: #fff;
+  border: 1px solid #dee2e6;
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.enquiry_pagination .page-link-1 {
+  border-top-left-radius: 7px;
+  border-bottom-left-radius: 7px;
+  color: #555;
+}
+
+.enquiry_pagination .page-link-2 {
+  border-top-right-radius: 7px;
+  border-bottom-right-radius: 7px;
+}
+
+.enquiry_pagination .page-link:hover {
+  background-color: #e9ecef;
+  color: #0056b3;
+}
+
+.enquiry_pagination .page-item.active .page-link {
+  z-index: 1;
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+.enquiry_pagination .page-item.disabled .page-link {
+  color: #6c757d;
+  pointer-events: none;
+  background-color: #fff;
+  border-color: #dee2e6;
+}
+
+.enquiry_pagination .page-link:focus {
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.card-view {
+  margin-left: 100px;
+}
+
+.enquiry-card-body .card-header {
+  background-color: #f0f0f0;
+  border-bottom: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.enquiry-card-view {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  justify-content: center;
+  padding: 16px;
+}
+
+.enquiry-card-body {
+  overflow: hidden;
+}
+
+.enquiry-card {
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 16px;
+  width: 100%;
+  max-width: 300px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.enquiry-card .enquiry-card-actions {
+  margin-top: 16px;
+  display: flex;
+  justify-content: end;
+    gap:  8px;
+}
+
+.enquiry-card .enquiry-card-actions .export-btn, .edit-btn, .delete-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+  color: #555;
+}
+.enquiry-card .enquiry-card-actions .export-btn:hover, .edit-btn:hover, .delete-btn:hover {
+  color: #000;
+}
+
+.enquiry-card .enquiry-card-actions .export-btn {
+  color: #007bff;
+}
+.enquiry-card .enquiry-card-actions .export-btn:hover {
+  color: #0056b3;
+}
+
+.enquiry-card .enquiry-card-actions .delete-btn {
+  color: #dc3545;
+}
+.enquiry-card .enquiry-card-actions .delete-btn:hover {
+  color: #c82333;
+}
+
+.enquiry-card .enquiry-card-actions .edit-btn {
+  color: #007bff;
+}
+.enquiry-card .enquiry-card-actions .edit-btn:hover {
+  color: #0056b3;
+}
+
+@media (max-width: 767px) {
+  .enquiry_add_button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 8px 32px;
+    cursor: pointer;
+    font-size: 17px;
+    border-radius: 5px;
+    margin-left: 43px;
+  }
+  .enquiry_export_button {
+    background-color: #007bff;
+    color: rgb(248, 240, 240);
+    border: none;
+    margin-left: 24px;
+    padding: 11px 20px;
+    cursor: pointer;
+    font-size: 18px;
+    border-radius: 5px;
+    position: relative; /* Added for positioning the hover text */
+    display: inline-flex; /* Flex for alignment */
+    align-items: center; /* Center alignment */
+    justify-content: center; /* Center alignment */
+  }
+  .enquiry_search_bar {
+    display: flex;
+    justify-content: center;
+    padding: 0 10px;
+    padding: 0 10px;
+    margin-bottom: 26px;
+    margin-top: -1px;
+    min-width: 15%;
+    margin-left: 47%;
+    height: 26px;
+    padding: 6px;
+    border-radius: 7px;
+    border: 1px solid #ccc;
+  }
+  .enquiry_switch_button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 7px 11px;
+    cursor: pointer;
+    font-size: 18px;
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+    margin-left: 19px;
+    width: 57px;
+    height: 40px;
+  }
+  .enquiry_switch_button:hover {
+    background-color: #0056b3; /* Replace with the actual $secondary-color value */
+  }
+  .enquiry_table {
+    width: 96%;
+    overflow-x: scroll;
+    margin-left: 7px;
+  }
+  .Enquiry-table-1 {
+    width: 280%;
+    margin: 0 auto;
+    font-size: 13px;
+    text-align: left;
+  }
+  .Enquiry-table-1 th, .Enquiry-table-1 td {
+    padding: 12px 15px;
+  }
+  .Enquiry-table-1 thead {
+    background-color: #f4f4f4;
+  }
+  .Enquiry-table-1 thead th {
+    font-weight: bold;
+    text-transform: capitalize;
+  }
+  .Enquiry-table-1 tbody tr:nth-child(even) {
+    background-color: #f9f9f9;
+  }
+  .Enquiry-table-1 tbody tr:hover {
+    background-color: #f1f1f1;
+  }
+  .Enquiry-table-1 tbody tr td.actions {
+    gap: 3px;
+    width: 75px;
+  }
+  .Enquiry-table-1 tbody tr td.actions .export-btn, .Enquiry-table-1 tbody tr td.actions .edit-btn, .Enquiry-table-1 tbody tr td.actions .delete-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 13px;
+    color: #555;
+  }
+  .Enquiry-table-1 tbody tr td.actions .export-btn:hover, .Enquiry-table-1 tbody tr td.actions .edit-btn:hover, .Enquiry-table-1 tbody tr td.actions .delete-btn:hover {
+    color: #000;
+  }
+  .Enquiry-table-1 tbody tr td.actions .edit-btn {
+    color: #007bff;
+  }
+  .Enquiry-table-1 tbody tr td.actions .edit-btn:hover {
+    color: #0056b3;
+  }
+  .Enquiry-table-1 tbody tr td.actions .delete-btn {
+    color: #dc3545;
+  }
+  .Enquiry-table-1 tbody tr td.actions .delete-btn:hover {
+    color: #c82333;
+  }
+  .Enquiry-table-1 tbody tr td.actions .export-btn {
+    color: #007bff;
+  }
+  .Enquiry-table-1 tbody tr td.actions .export-btn:hover {
+    color: #0056b3;
+  }
+  .enquiry-count {
+    margin-left: 127px;
+    margin-right: 0px;
+    margin-top: 15px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1024px) {
+  .enquiry_add_button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 8px 32px;
+    cursor: pointer;
+    font-size: 17px;
+    border-radius: 5px;
+    margin-left: 389px;
+  }
+  .enquiry_export_button {
+    background-color: #007bff;
+    color: rgb(248, 240, 240);
+    border: none;
+    margin-left: 40px;
+    padding: 11px 20px;
+    cursor: pointer;
+    font-size: 18px;
+    border-radius: 5px;
+    position: relative; /* Added for positioning the hover text */
+    display: inline-flex; /* Flex for alignment */
+    align-items: center; /* Center alignment */
+    justify-content: center; /* Center alignment */
+  }
+  .enquiry_search_bar {
+    display: flex;
+    justify-content: center;
+    padding: 0 10px;
+    padding: 0 10px;
+    margin-bottom: 26px;
+    margin-top: -1px;
+    min-width: 15%;
+    margin-left: 71%;
+    height: 26px;
+    padding: 6px;
+    border-radius: 7px;
+    border: 1px solid #ccc;
+  }
+  .enquiry_switch_button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 7px 11px;
+    cursor: pointer;
+    font-size: 18px;
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+    margin-left: 19px;
+    width: 57px;
+    height: 40px;
+  }
+  .enquiry_switch_button:hover {
+    background-color: #0056b3; /* Replace with the actual $secondary-color value */
+  }
+  .enquiry_table {
+    overflow-x: scroll;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .Enquiry-table-1 {
+    width: 150%;
+    margin: 0 auto;
+    font-size: 13px;
+    text-align: left;
+  }
+  .Enquiry-table-1 th, .Enquiry-table-1 td {
+    padding: 12px 15px;
+  }
+  .Enquiry-table-1 thead {
+    background-color: #f4f4f4;
+  }
+  .Enquiry-table-1 thead th {
+    font-weight: bold;
+    text-transform: capitalize;
+  }
+  .Enquiry-table-1 tbody tr:nth-child(even) {
+    background-color: #f9f9f9;
+  }
+  .Enquiry-table-1 tbody tr:hover {
+    background-color: #f1f1f1;
+  }
+  .Enquiry-table-1 tbody tr td.actions {
+    gap: 3px;
+    width: 75px;
+  }
+  .Enquiry-table-1 tbody tr td.actions .export-btn, .Enquiry-table-1 tbody tr td.actions .edit-btn, .Enquiry-table-1 tbody tr td.actions .delete-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 13px;
+    color: #555;
+  }
+  .Enquiry-table-1 tbody tr td.actions .export-btn:hover, .Enquiry-table-1 tbody tr td.actions .edit-btn:hover, .Enquiry-table-1 tbody tr td.actions .delete-btn:hover {
+    color: #000;
+  }
+  .Enquiry-table-1 tbody tr td.actions .edit-btn {
+    color: #007bff;
+  }
+  .Enquiry-table-1 tbody tr td.actions .edit-btn:hover {
+    color: #0056b3;
+  }
+  .Enquiry-table-1 tbody tr td.actions .delete-btn {
+    color: #dc3545;
+  }
+  .Enquiry-table-1 tbody tr td.actions .delete-btn:hover {
+    color: #c82333;
+  }
+  .Enquiry-table-1 tbody tr td.actions .export-btn {
+    color: #007bff;
+  }
+  .Enquiry-table-1 tbody tr td.actions .export-btn:hover {
+    color: #0056b3;
+  }
+  .enquiry-count {
+    margin-left: 570px;
+    margin-right: 0px;
+    margin-top: 15px;
+  }
+}
+@media (min-width: 1025px) and (max-width: 1399px) {
+  .enquiry-card {
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 16px;
+    width: 20%;
+    max-width: 260px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  .enquiry_export_button {
+    background-color: #007bff;
+    color: rgb(248, 240, 240);
+    border: none;
+    margin-left: 72px;
+    padding: 11px 20px;
+    cursor: pointer;
+    font-size: 18px;
+    border-radius: 5px;
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .enquiry_add_button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 8px 32px;
+    margin-right: 14px;
+    cursor: pointer;
+    font-size: 17px;
+    border-radius: 5px;
+    margin-left: 929px;
+  }
+  .enquiry_search_bar {
+    display: flex;
+    justify-content: center;
+    padding: 0 10px;
+    padding: 0 10px;
+    margin-bottom: 26px;
+    margin-top: -1px;
+    min-width: 15%;
+    margin-left: 1075px;
+    height: 26px;
+    padding: 6px;
+    border-radius: 7px;
+    border: 1px solid #ccc;
+  }
+  .enquiry-count {
+    margin-left: 1145px;
+    margin-right: 0px;
+    margin-top: 15px;
+  }
 }/*# sourceMappingURL=EnquiryDetails.css.map */
